Fixing a spacing issue with small devices. Forgot to add margin-bottom to the smallest screen.

--- a/public/css/home-page.css
+++ b/public/css/home-page.css
@@ -22,6 +22,7 @@
     position: relative;
     background-color: #E8E8E8;
     z-index: 10;
+    margin-bottom: 2rem;
 }
 
 .slanted-separator{
